--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^5.14.8",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "mui-image": "^1.0.7",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
