--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint-config-next": "13.4.19",
     "mui-image": "^1.0.7",
     "next": "13.4.19",
-    "react": "18.2.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.11"
   },
