--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "mui-image": "^1.0.7",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
@@ -30,5 +30,10 @@
   },
   "devDependencies": {
     "sass": "^1.66.1"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
